--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+/* FONT POKEMON */
+@font-face {
+  font-family: poke;
+  src: url(assets/font/poke.ttf) format("opentype");
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'poke', 'arial', sans-serif;
+}
+
+
+/*ANIMATION FLASH ATTAQUE
+a garder lien utile
+https://www.web-eau.net/blog/15-effets-css3-pour-vos-images
+*/
+
+.flash {
+  opacity: 1;
+  -webkit-animation: flash 1.5s;
+  animation: flash 1.5s;
+}
+@-webkit-keyframes flash {
+  0% {
+    opacity: .4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes flash {
+  0% {
+    opacity: .4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
+.blur  {
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+  transform: rotate(90deg);
+}
+
+
+
