--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,10 @@ https://www.web-eau.net/blog/15-effets-css3-pour-vos-images
 
 
 
+.positive {
+  background-color: green;
+}
+
+.negative {
+  background-color: red;
+}
