--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,14 +30,29 @@
   transform: rotate(90deg);
 }
 
-
-.barre{
-  margin-top:70px; font-size:14px; border:2px solid #333; float:right;width: 200px; border-radius:20px;height: 65px; background-color:white;
+.barreL {
+  margin-right: 20px;
+  font-size: 11px;
+  margin-top: 20px;
+  border: 2px solid #333;
+  float: right;
+  width: 200px;
+  border-radius: 20px;
+  height: 55px;
+  background-color: white;
+}
+.barreR {
+  margin-left: 30px;
+  margin-top: 70px;
+  font-size: 11px;
+  border: 2px solid #333;
+  float: right;
+  width: 200px;
+  border-radius: 20px;
+  height: 55px;
+  background-color: white;
 }
 
-.barretop{
-  margin-top:20px;
-}
 
 
 .barreclassique{
